[package]
name = "sherlock"
version = "0.1.0"
authors = ["Nathaniel Graham <ngraham20@my.whitworth.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap = {version = "^0.11", features = ["hyphenation", "term_size"]}
serde_json = "^1.0.48"
serde = { version = "^1.0.104", features = ["derive"] }